맵업데이트 및 모드추가

--- a/PawnCharacter/Config/DefaultEngine.ini
+++ b/PawnCharacter/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MainLevel.MainLevel
-EditorStartupMap=/Game/Maps/MainLevel.MainLevel
-GlobalDefaultGameMode=/Game/Blueprints/BP_PawnGameMode.BP_PawnGameMode_C
+GameDefaultMap=/Game/Maps/WesternDesertTown2.WesternDesertTown2
+EditorStartupMap=/Game/Maps/WesternDesertTown2.WesternDesertTown2
+GlobalDefaultGameMode=/Game/Blueprints/BP_NinjaGameMode.BP_NinjaGameMode_C
 GlobalDefaultServerGameMode=/Game/Blueprints/BP_PawnGameMode.BP_PawnGameMode_C
 GameInstanceClass=/Game/Blueprints/BP_PawnGameInstance.BP_PawnGameInstance_C
 
