--- a/PawnCharacter/Config/DefaultEngine.ini
+++ b/PawnCharacter/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/WesternDesertTown2.WesternDesertTown2
 EditorStartupMap=/Game/Maps/WesternDesertTown2.WesternDesertTown2
-GlobalDefaultGameMode=/Script/PawnCharacter.NinjaGameMode
+GlobalDefaultGameMode=/Game/Characters/GameMode/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=/Game/Blueprints/BP_PawnGameMode.BP_PawnGameMode_C
 GameInstanceClass=/Game/Blueprints/BP_PawnGameInstance.BP_PawnGameInstance_C
 
